fix: add gap for buttons

--- a/src/styles/components/button.css
+++ b/src/styles/components/button.css
@@ -19,6 +19,7 @@
 /* Base button will always be a primary one */
 .button {
   display: inline-flex;
+  gap: var(--space-4);
   justify-content: center;
 
   padding: var(--space-5);
